--- a/bookshare_front/src/Components/PasswordReset/PasswordReset.css
+++ b/bookshare_front/src/Components/PasswordReset/PasswordReset.css
@@ -1,11 +1,12 @@
-
-.Register {
+.LoginOrMail {
     padding: 60px 0;
     /*background: rgb(195,71,34);*/
     /*background: radial-gradient(circle, rgba(195,71,34,1) 0%, rgba(253,187,45,1) 100%);*/
+
+
 }
 
-.Register form {
+.LoginOrMail form {
     margin: 0 auto;
     padding: 20px;
     max-width: 320px;
