Added div to mainview, added new routes, cleaned some unused imports

--- a/bookshare_front/src/Views/MainView.css
+++ b/bookshare_front/src/Views/MainView.css
@@ -10,3 +10,8 @@
     /*background: linear-gradient(180deg, rgba(195,71,34,1) 0%, rgba(253,187,45,1) 100%);*/
 }
 
+.View{
+    border: 1px solid;
+    background: #F5F3EA;
+}
+
