Too much to describe

--- a/bookshare_front/src/Components/AccountEdit/AdminAccountEdit.css
+++ b/bookshare_front/src/Components/AccountEdit/AdminAccountEdit.css
@@ -26,6 +26,13 @@
 .InfoRightColumn{
     text-align: end;
 }
+.InfoRightColumnWithLink{
+    text-align: end;
+}
+.InfoRightColumnWithLink:hover{
+    cursor: pointer;
+    text-align: end;
+}
 
 .PasswordAccordion{
     background: #F5F3EA;
