Fixed displaying own books, added taking and returning books, added reservation and reservation canceling

--- a/bookshare_front/src/Components/Bookshelf/Bookshelf.css
+++ b/bookshare_front/src/Components/Bookshelf/Bookshelf.css
@@ -43,3 +43,18 @@
     text-align: end;
     /*border: black solid 1px;*/
 }
+
+.returnBookChoice{
+    max-width: 330px;
+    width: 330px;
+    text-align: end;
+    align-content: end;
+}
+
+.selectBookDiv{
+    text-align: end;
+    align-content: end;
+    display: inline-block;
+    margin: auto;
+    max-width: 300px;
+}
